--- a/src/main/resources/templates/admin/products/list.html
+++ b/src/main/resources/templates/admin/products/list.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Quản Lý Sản Phẩm</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Danh Sách Sản Phẩm</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -13,19 +14,21 @@
         <thead>
         <tr>
             <th>ID</th>
-            <th>Tên</th>
+            <th>Tên Sản Phẩm</th>
+            <th>Thương Hiệu</th>
             <th>Giá</th>
-            <th>Thao Tác</th>
+            <th>Hành Động</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="product : ${products}">
             <td th:text="${product.id}"></td>
             <td th:text="${product.name}"></td>
-            <td th:text="'$' + ${product.price}"></td>
+            <td th:text="${product.brand}"></td>
+            <td th:text="${product.price}"></td>
             <td>
                 <a th:href="@{/admin/products/edit/{id}(id=${product.id})}" class="btn btn-warning">Sửa</a>
-                <a th:href="@{/admin/products/delete/{id}(id=${product.id})}" class="btn btn-danger">Xoá</a>
+                <a th:href="@{/admin/products/delete/{id}(id=${product.id})}" class="btn btn-danger" onclick="return confirm('Bạn có chắc chắn muốn xóa?');">Xóa</a>
             </td>
         </tr>
         </tbody>
