--- a/src/main/resources/templates/products/cart.html
+++ b/src/main/resources/templates/products/cart.html
@@ -9,7 +9,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Watchesse</a>
+        <a class="navbar-brand" href="/products/index">Watchesse</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
