--- a/src/main/resources/templates/products/product.html
+++ b/src/main/resources/templates/products/product.html
@@ -21,13 +21,13 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Watchesse</a>
+        <a class="navbar-brand" href="/products/index">Watchesse</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Trang Chủ</a></li>
+                <li class="nav-item"><a class="nav-link" href="/products/index">Trang Chủ</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Sản Phẩm</a></li>
                 <li class="nav-item"><a class="nav-link" href="/products/cart"><i class="bi bi-cart-fill"></i> Giỏ Hàng</a></li>
             </ul>
