--- a/src/main/resources/templates/products/product.html
+++ b/src/main/resources/templates/products/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sản phẩm</title>
+    <title>Watchesse</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <style>
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="/products/index">Trang Chủ</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Sản Phẩm</a></li>
+                <li class="nav-item"><a class="nav-link" href="#"></a></li>
                 <li class="nav-item"><a class="nav-link" href="/products/cart"><i class="bi bi-cart-fill"></i> Giỏ Hàng</a></li>
                 <li class="nav-item" th:if="${user == null}">
                     <a class="nav-link" href="/auth/login">Đăng Nhập</a>
@@ -47,7 +47,7 @@
     </div>
 </nav>
 <div class="container">
-    <h1 class="text-center my-4">Sản Phẩm</h1>
+    <h1 class="text-center my-4"></h1>
     <div class="row row-cols-2 row-cols-md-4 g-4">
         <div th:each="product : ${products}">
             <div class="col">
