--- a/src/main/resources/templates/products/detail.html
+++ b/src/main/resources/templates/products/detail.html
@@ -30,7 +30,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="/products/index">Trang Chủ</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Sản Phẩm</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Đồng Hồ Nam</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Đồng Hồ Nữ</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Sản Phẩm Mới</a></li>
                 <li class="nav-item"><a class="nav-link" href="/products/cart"><i class="bi bi-cart-fill"></i> Giỏ Hàng</a></li>
                 <li class="nav-item" th:if="${user == null}">
                     <a class="nav-link" href="/auth/login">Đăng Nhập</a>
@@ -69,6 +71,43 @@
         </a>
     </div>
 </div>
+<footer class="bg-dark text-light py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h5>VỀ WATCHESSE</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-light">Giới thiệu về Watchesse</a></li>
+                    <li><a href="#" class="text-light">Chính sách chung</a></li>
+                    <li><a href="#" class="text-light">Chính sách bảo hành</a></li>
+                    <li><a href="#" class="text-light">Chính sách bảo mật</a></li>
+                    <li><a href="#" class="text-light">Chính sách vận chuyển</a></li>
+                    <li><a href="#" class="text-light">Chính sách đổi trả</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h5>CỬA HÀNG</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-light">Cửa hàng Hà Nội</a></li>
+                    <li><a href="#" class="text-light">Cửa hàng TP.HCM</a></li>
+                    <li><a href="#" class="text-light">Cửa hàng Đà Nẵng</a></li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <h5>LIÊN HỆ HỖ TRỢ</h5>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-light">Hotline: 086 2784 4855</a></li>
+                    <li><a href="#" class="text-light">Hotline: 097 3112 2230</a></li>
+                    <li><a href="#" class="text-light">Hotline: 096 139 5555</a></li>
+                    <li><a href="#" class="text-light">Email: watchesse@gmail.com</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="text-center mt-4">
+            <p>&copy; 2024 Watchesse. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
